--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -323,16 +323,16 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_DEADLINE is not set
-CONFIG_IOSCHED_MAPLE=y
+# CONFIG_IOSCHED_MAPLE is not set
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_MAPLE=y
-CONFIG_DEFAULT_IOSCHED="maple"
+# CONFIG_DEFAULT_MAPLE is not set
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -4012,7 +4012,7 @@ CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
 # CONFIG_MSM_MHI_DEBUG is not set
 CONFIG_MSM_11AD=y
-CONFIG_SEEMP_CORE=y
+# CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
 CONFIG_CLKDEV_LOOKUP=y
@@ -4559,7 +4559,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
-CONFIG_PRINT_QUOTA_WARNING=y
+# CONFIG_PRINT_QUOTA_WARNING is not set
 # CONFIG_QUOTA_DEBUG is not set
 CONFIG_QUOTA_TREE=y
 # CONFIG_QFMT_V1 is not set
