--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.184 Kernel Configuration
+# Linux/arm64 4.4.185 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -124,8 +124,8 @@ CONFIG_RCU_NOCB_CPU=y
 CONFIG_RCU_NOCB_CPU_ALL=y
 # CONFIG_RCU_EXPEDITE_BOOT is not set
 CONFIG_BUILD_BIN2C=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
+# CONFIG_IKCONFIG is not set
+# CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=18
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
@@ -1359,9 +1359,9 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SCH is not set
 CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 
 #
@@ -2736,15 +2736,15 @@ CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_MSM_ISPIF_V2 is not set
-CONFIG_IMX134=y
-CONFIG_IMX132=y
-CONFIG_OV9724=y
-CONFIG_OV5648=y
-CONFIG_GC0339=y
-CONFIG_OV8825=y
-CONFIG_OV8865=y
-CONFIG_s5k4e1=y
-CONFIG_OV12830=y
+# CONFIG_IMX134 is not set
+# CONFIG_IMX132 is not set
+# CONFIG_OV9724 is not set
+# CONFIG_OV5648 is not set
+# CONFIG_GC0339 is not set
+# CONFIG_OV8825 is not set
+# CONFIG_OV8865 is not set
+# CONFIG_s5k4e1 is not set
+# CONFIG_OV12830 is not set
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
@@ -3349,7 +3349,7 @@ CONFIG_USB_DEFAULT_PERSIST=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
-CONFIG_USB_EHCI_HCD=y
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_EHCI_ROOT_HUB_TT is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=y
@@ -4030,9 +4030,9 @@ CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_OF_IOMMU=y
 CONFIG_ARM_SMMU=y
 # CONFIG_ARM_SMMU_V3 is not set
-CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
-CONFIG_IOMMU_TESTS=y
+# CONFIG_IOMMU_DEBUG is not set
+# CONFIG_IOMMU_DEBUG_TRACKING is not set
+# CONFIG_IOMMU_TESTS is not set
 
 #
 # Remoteproc drivers
@@ -4064,7 +4064,7 @@ CONFIG_MSM_GLINK_SMEM_NATIVE_XPRT=y
 CONFIG_MSM_GLINK_SPI_XPRT=y
 CONFIG_MSM_SPCOM=y
 CONFIG_MSM_SPSS_UTILS=y
-CONFIG_MSM_SMEM_LOGGING=y
+# CONFIG_MSM_SMEM_LOGGING is not set
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_QMI_INTERFACE=y
@@ -4536,7 +4536,7 @@ CONFIG_FUSE_FS=y
 # DOS/FAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
