--- a/arch/arm64/configs/oneplus5_defconfig
+++ b/arch/arm64/configs/oneplus5_defconfig
@@ -1062,7 +1062,7 @@ CONFIG_DNS_RESOLVER=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
-CONFIG_RMNET_DATA_DEBUG_PKT=y
+# CONFIG_RMNET_DATA_DEBUG_PKT is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -2693,7 +2693,7 @@ CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
-CONFIG_VIDEO_ADV_DEBUG=y
+# CONFIG_VIDEO_ADV_DEBUG is not set
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VIDEOBUF2_CORE=y
@@ -2720,9 +2720,9 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 # QTI MSM Camera And Video & AIS
 #
 CONFIG_MSM_CAMERA=y
-CONFIG_MSM_CAMERA_DEBUG=y
+# CONFIG_MSM_CAMERA_DEBUG is not set
 CONFIG_MSMB_CAMERA=y
-CONFIG_MSMB_CAMERA_DEBUG=y
+# CONFIG_MSMB_CAMERA_DEBUG is not set
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
@@ -2966,7 +2966,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 CONFIG_IRIS2_IO=y
 CONFIG_BACKLIGHT_LP8557E01=y
 # CONFIG_IRIS2_FULL_SUPPORT is not set
@@ -3458,7 +3458,7 @@ CONFIG_QPNP_USB_PDPHY=y
 # CONFIG_USB_TRANCEVIBRATOR is not set
 # CONFIG_USB_IOWARRIOR is not set
 # CONFIG_USB_TEST is not set
-CONFIG_USB_EHSET_TEST_FIXTURE=y
+# CONFIG_USB_EHSET_TEST_FIXTURE is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
 # CONFIG_USB_EZUSB_FX2 is not set
@@ -4723,7 +4723,7 @@ CONFIG_HAVE_ARCH_KASAN=y
 # CONFIG_WQ_WATCHDOG is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
-CONFIG_PANIC_TIMEOUT=5
+CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
@@ -4845,7 +4845,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEBUG_RODATA=y
-CONFIG_DEBUG_ALIGN_RODATA=y
+# CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
